Switch to alpine, add apprise
This requires building webhook w/o CGO

--- a/g10k.yaml.tmpl
+++ b/g10k.yaml.tmpl
@@ -9,7 +9,7 @@
   trigger-rule:
     and:
       - match:
-          type: payload-hash-sha1
+          type: payload-hmac-sha1
           secret: "{{ getenv "HOOK_SECRET" | js }}"
           parameter:
             source: header
@@ -26,7 +26,7 @@
   trigger-rule:
     and:
       - match:
-          type: payload-hash-sha256
+          type: payload-hmac-sha256
           secret: "{{ getenv "HOOK_SECRET" | js }}"
           parameter:
             source: header
